[package]
name = "wireworld-xorshift-798"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.1"
bevy_life = "0.11.0"
ca-formats = "0.3.5"
ndarray = "0.16.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
strip = "debuginfo"

